// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Versioning should get lowest target versions 1`] = `
Array [
  Object {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  Object {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  Object {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 15,
    "target": "samsung",
    "version": "15.0",
  },
  Object {
    "parsedVersion": 15.2,
    "target": "safari",
    "version": "15.2-15.3",
  },
  Object {
    "parsedVersion": 87,
    "target": "opera",
    "version": "87",
  },
  Object {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 14.5,
    "target": "ios_saf",
    "version": "14.5-14.8",
  },
  Object {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 78,
    "target": "firefox",
    "version": "78",
  },
  Object {
    "parsedVersion": 102,
    "target": "edge",
    "version": "102",
  },
  Object {
    "parsedVersion": 102,
    "target": "chrome",
    "version": "102",
  },
  Object {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 104,
    "target": "android",
    "version": "104",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 10.4,
    "target": "and_qq",
    "version": "10.4",
  },
  Object {
    "parsedVersion": 101,
    "target": "and_ff",
    "version": "101",
  },
  Object {
    "parsedVersion": 104,
    "target": "and_chr",
    "version": "104",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
Array [
  Object {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
Array [
  Object {
    "parsedVersion": 17,
    "target": "samsung",
    "version": "17.0",
  },
  Object {
    "parsedVersion": 15.5,
    "target": "safari",
    "version": "15.5",
  },
  Object {
    "parsedVersion": 89,
    "target": "opera",
    "version": "89",
  },
  Object {
    "parsedVersion": 64,
    "target": "op_mob",
    "version": "64",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 14.5,
    "target": "ios_saf",
    "version": "14.5-14.8",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie",
    "version": "11",
  },
  Object {
    "parsedVersion": 78,
    "target": "firefox",
    "version": "78",
  },
  Object {
    "parsedVersion": 103,
    "target": "edge",
    "version": "103",
  },
  Object {
    "parsedVersion": 103,
    "target": "chrome",
    "version": "103",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 104,
    "target": "android",
    "version": "104",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 10.4,
    "target": "and_qq",
    "version": "10.4",
  },
  Object {
    "parsedVersion": 101,
    "target": "and_ff",
    "version": "101",
  },
  Object {
    "parsedVersion": 104,
    "target": "and_chr",
    "version": "104",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 15,
    "target": "samsung",
    "version": "15.0",
  },
  Object {
    "parsedVersion": 15.2,
    "target": "safari",
    "version": "15.2-15.3",
  },
  Object {
    "parsedVersion": 87,
    "target": "opera",
    "version": "87",
  },
  Object {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 14.5,
    "target": "ios_saf",
    "version": "14.5-14.8",
  },
  Object {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 78,
    "target": "firefox",
    "version": "78",
  },
  Object {
    "parsedVersion": 102,
    "target": "edge",
    "version": "102",
  },
  Object {
    "parsedVersion": 96,
    "target": "chrome",
    "version": "96",
  },
  Object {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 104,
    "target": "android",
    "version": "104",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 10.4,
    "target": "and_qq",
    "version": "10.4",
  },
  Object {
    "parsedVersion": 101,
    "target": "and_ff",
    "version": "101",
  },
  Object {
    "parsedVersion": 104,
    "target": "and_chr",
    "version": "104",
  },
]
`;

exports[`Versioning should support single version config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 8,
    "target": "safari",
    "version": "8",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 20,
    "target": "firefox",
    "version": "20",
  },
  Object {
    "parsedVersion": 32,
    "target": "chrome",
    "version": "32",
  },
]
`;

exports[`Versioning should support string config in rule option 1`] = `
Array [
  Object {
    "parsedVersion": 17,
    "target": "samsung",
    "version": "17.0",
  },
  Object {
    "parsedVersion": 15.5,
    "target": "safari",
    "version": "15.5",
  },
  Object {
    "parsedVersion": 89,
    "target": "opera",
    "version": "89",
  },
  Object {
    "parsedVersion": 64,
    "target": "op_mob",
    "version": "64",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 14.5,
    "target": "ios_saf",
    "version": "14.5-14.8",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie",
    "version": "11",
  },
  Object {
    "parsedVersion": 78,
    "target": "firefox",
    "version": "78",
  },
  Object {
    "parsedVersion": 103,
    "target": "edge",
    "version": "103",
  },
  Object {
    "parsedVersion": 103,
    "target": "chrome",
    "version": "103",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 104,
    "target": "android",
    "version": "104",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 10.4,
    "target": "and_qq",
    "version": "10.4",
  },
  Object {
    "parsedVersion": 101,
    "target": "and_ff",
    "version": "101",
  },
  Object {
    "parsedVersion": 104,
    "target": "and_chr",
    "version": "104",
  },
]
`;
